# aoc2022

aoc/: Cargo.toml
aoc/src/: lib.rs
day1/: Cargo.toml
day1/src/: main.rs
day10/: Cargo.toml
day10/src/: main.rs
day11/: Cargo.toml  example.txt  input.txt
day11/src/: main.rs
day12/: Cargo.toml  bfs.txt
day12/src/: main.rs
day13/: Cargo.toml
day13/src/: main.rs
day14/: Cargo.toml  example.txt
day14/src/: main.rs
day15/: Cargo.toml  distances.xlsx
day15/src/: main.rs
day16/: Cargo.toml
day16/src/: main.rs
day17/: Cargo.toml
day17/src/: main.rs
day18/: Cargo.toml
day18/src/: main.rs
day19/: Cargo.toml
day19/src/: main.rs
day2/: Cargo.toml  error.txt
day2/src/: main.rs
day20/: Cargo.toml
day20/src/: main.rs
day3/: Cargo.toml
day3/src/: main.rs
day4/: Cargo.toml
day4/src/: main.rs
day5/: Cargo.toml
day5/src/: main.rs
day6/src/: main.rs
day7/: Cargo.toml  main.kt
day7/src/: main.rs
day8/: Cargo.toml
day8/src/: main.rs
day9/: Cargo.toml
day9/src/: main.rs
sudoku/: Cargo.toml  input.txt
sudoku/src/: main.rs
ulam/: Cargo.toml
ulam/src/: main.rs
