[package]
name = "day20"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc = { path = "../aoc" }
log = "0.4.17"
itertools = "0.10.5"

[dev-dependencies]
rstest = "0.16.0"

[profile.release]
debug = true